--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -124,7 +124,7 @@ a:hover { color: #FF0; }
 
 .primary-button a {
   display: inline-block;
-  background-color: #ff7d27;
+  background-color: #29b90c;
   padding: 15px 24px;
   border-radius: 3px;
   text-transform: uppercase;
@@ -151,15 +151,16 @@ a:hover { color: #FF0; }
 
 .baner-content h1 {
   margin-top: 0px;
-  font-size: 128px;
-  color: #fff;
+  font-size: 108px;
+  color: #04680c;
+  
   font-weight: 900;
   text-transform: uppercase;
   margin-bottom: 0px;
 }
 
 .baner-content em {
-  color: #ff7d27;
+  color: #29b90c;
   font-weight: 600;
   font-style: normal;
 }
@@ -237,7 +238,7 @@ h4, .h4 {
 .service-content .service-item .line-dec {
   width: 45px;
   height: 3px;
-  background-color: #ff7d27;
+  background-color: #29b90c;
   margin: 20px auto 15px auto;
 }
 
@@ -410,7 +411,7 @@ section {
 
 #contact button {
   display: inline-block;
-  background-color: #ff7d27;
+  background-color: #29b90c;
   padding: 15px 24px;
   width: 100%;
   border-radius: 3px;
@@ -481,19 +482,21 @@ footer p {
 }
 
 footer em {
-  color: #ff8e43;
+  color: #29b90c;
   font-weight: 600;
   font-style: normal;
 }
 
-@media (max-width: 767px){
+@media (max-width: 1000px){
   
   .baner-content {
     padding-top: 30vh;
   }
 
   .baner-content h1 {
-    font-size: 64px;
+    font-size: 52px;
+    padding-bottom: 15px;
+    color:#04680c
   }
 
   .baner-content em {
@@ -515,7 +518,7 @@ footer em {
   .service-content .left-text .line-dec {
     width: 45px;
     height: 3px;
-    background-color: #ff7d27;
+    background-color: #29b90c;
     margin: 20px auto 20px auto;
   }
 
@@ -589,7 +592,7 @@ body.lb-disable-scrolling {
 
 .lb-outerContainer {
   position: relative;
-  *zoom: 1;
+  zoom: 1;
   width: 250px;
   height: 250px;
   margin: 0 auto;
@@ -687,7 +690,7 @@ body.lb-disable-scrolling {
 .lb-dataContainer {
   margin: 0 auto;
   padding-top: 5px;
-  *zoom: 1;
+  zoom: 1;
   width: 100%;
   -moz-border-radius-bottomleft: 4px;
   -webkit-border-bottom-left-radius: 4px;
