--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -186,9 +186,12 @@ a:hover { color: #FF0; }
   background-image: url(../img/2nd-section.jpg);
   background-attachment: fixed;
   min-height: 100vh;
+  background-image: brightness(.4);
   background-size: cover;
   background-position: center center;
 }
+
+
 
 .service-content .left-text h4 {
   font-size: 24px;
